# lua-deepspeech

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tupfile  lua_deepspeech.c  main.lua  tup.config.sample
.github/workflows/: workflow.yml
